
NavigationTag
----------------------
* Fixed bug to allow "L" in build label - Patch by Christopher Lenz
* Added "startingBuildNumber" and "finalBuildNumber" attributes, to allow for ranges of builds to be output; useful for, say, creating a drop-down list after the first 10 links.

PVCS
----------------------
* Fixed bug with UNC share paths - Patch by Dan Rollo
* Added pvcsbin attribute for when pvcs is not on the path - Patch by Dan Rollo

XSLTag
----------------------
* Fixed a bug where using an unexpanded WAR file caused a NullPointerException.
* Added "xslRootContext" property, so that nested stylesheets know where the default directory is.


CruiseControl Release Notes - 2.0.2

JMX/PROJECT CONTROLLER
----------------------
* Added ability to force a rebuild via ProjectController (and effectivly JMX) Patch by Dominick Bellizzi. An implementation note. If project is in state "PAUSED" it won't force the build until you command "RESUME", but then it will emediatly start building.


PROJECT
----------------------
* Added ability to choose whether CruiseControl should continue to build after failure. Set in config via <project buildafterfailed="true/false">. Default is current behaviour, which is true. Patch by Dominick Bellizzi

JSP
----------------------
* XSL modified to render compile errors/warnings correctly on Netscape 4.7 - Patch by Sanjay Madhaven

EmailPublisher
----------------------
* Allow optional subject line prefix on emails for easier filtering - Patch by Peter Mei
* Added 'skipUsers' attribute to skip sending email to users who have checked in code - Patch by Jeffrey Fredrick
* Added optional 'returnName' attribute that pairs w/fromAddress - Patch by Gunnar Wagenknecht

Manifest
----------------------
* Added missing ant.jar, optional.jar, and xalan.jar manifest classpath entries - Bug found by Brett Watson

Ant
----------------------
* Ability to choose whether Ant runs XmlLogger as a Logger or a Listener - Patch by Keith Levy

P4